packages/tree-sitter-openscad/grammar.js
    source_file: ($) => repeat($.statement),

    statement: ($) =>
      choice(
        $.assignment_statement,
        $.module_definition,
        $.function_definition,
        $.module_instantiation,
        $.include_statement,
        $.use_statement,
        $.if_statement,
        $.for_statement,
        $.echo_statement,
        $.assert_statement,
        $.block
      ),

    // Basic statements
    assignment_statement: ($) =>
      seq(
        field('name', choice($.identifier, $.special_variable)),
        '=',
        field('value', $._value),
        optional(';')
      ),

    module_definition: ($) =>
      seq(
        'module',
        field('name', $.identifier),
        field('parameters', $.parameter_list),
        field('body', $.block)
      ),

    function_definition: ($) =>
      seq(
        'function',
        field('name', $.identifier),
        field('parameters', $.parameter_list),
        '=',
        field('value', $._value),
        optional(';')
      ),

    parameter_list: ($) =>
      seq(
        '(',
        optional($.parameter_declarations),
        choice(
          ')',
          // Error recovery for missing closing parenthesis
          prec(-1, token.immediate(/[;{]/)) // Recover at semicolon or opening brace
        )
      ),

    parameter_declarations: ($) => commaSep1($.parameter_declaration),

    parameter_declaration: ($) =>
      choice($.identifier, seq($.identifier, '=', $._value)),

    module_instantiation: ($) =>
      choice(
        prec(
          2,
          seq(
            optional($.modifier),
            field('name', $.identifier),
            field('arguments', $.argument_list),
            ';'
          )
        ),
        prec(
          2,
          seq(
            optional($.modifier),
            field('name', $.identifier),
            field('arguments', $.argument_list),
            $.block
          )
        ),
        prec(
          1,
          seq(
            optional($.modifier),
            field('name', $.identifier),
            field('arguments', $.argument_list),
            $.statement
          )
        )
      ),

    argument_list: ($) =>
      seq(
        '(',
        optional($.arguments),
        choice(
          ')',
          // Error recovery for missing closing parenthesis
          prec(-1, token.immediate(/[;{]/)) // Recover at semicolon or opening brace
        )
      ),

    argument: ($) =>
      choice(
        $._value,
        seq(field('name', $.identifier), '=', field('value', $._value)),
        seq(field('name', $.special_variable), '=', field('value', $._value))
      ),

    // Import statements
    echo_statement: ($) =>
      seq('echo', '(', optional($.arguments), ')', optional(';')),

    assert_statement: ($) =>
      choice(
        seq(
          'assert',
          '(',
          field('condition', $._value),
          ',',
          field('message', $._value),
          ')',
          optional(';')
        ),
        seq('assert', '(', field('condition', $._value), ')', optional(';'))
      ),

    // Arguments list for function calls
    arguments: ($) => commaSep1($.argument),

    // Primary expressions for the most basic literals and identifiers
    _value: ($) =>
      choice(
        // Literals - direct access
        $.number,
        $.string,
        $.boolean,
        $.undef,
        $.identifier,
        $.special_variable,

        // Complex expressions - direct access (prioritize ranges over vectors)
        prec.dynamic(10, $.range_expression), // High priority for [start:end] syntax
        $.vector_expression,
        $.binary_expression,
        $.unary_expression,
        $.conditional_expression,
        $.call_expression,
        $.index_expression,
        $.member_expression,
        $.let_expression,
        $.list_comprehension,
        $.parenthesized_expression
      ),

    // Vector element rule - excludes ranges to prevent parsing conflicts
    // Used specifically in vector_expression to avoid [start:end] being parsed as vector
    _vector_element: ($) =>
      choice(
        // Literals - direct access
        $.number,
        $.string,
        $.boolean,
        $.undef,
        $.identifier,
        $.special_variable,

        // Complex expressions - direct access (excluding range expressions)
        $.vector_expression,
        $.binary_expression,
        $.unary_expression,
        $.conditional_expression,
        $.call_expression,
        $.index_expression,
        $.member_expression,
        $.let_expression,
        // Removed range expressions to prevent ambiguity with [start:end] syntax
        $.list_comprehension,
        $.parenthesized_expression
      ),

    // Non-recursive value rule for list comprehension expressions
    // Completely separate expression rules to prevent ANY recursion back to list_comprehension
    // Uses aliasing to maintain expected AST node names while preventing recursion
    binary_expression: ($) =>
      choice(
        // Logical operators
        prec.left(
          1,
          seq(
            field('left', $._value),
            field('operator', alias('||', $.logical_or_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          2,
          seq(
            field('left', $._value),
            field('operator', alias('&&', $.logical_and_operator)),
            field('right', $._value)
          )
        ),

        // Equality operators
        prec.left(
          3,
          seq(
            field('left', $._value),
            field('operator', alias('==', $.equality_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          3,
          seq(
            field('left', $._value),
            field('operator', alias('!=', $.inequality_operator)),
            field('right', $._value)
          )
        ),

        // Relational operators
        prec.left(
          4,
          seq(
            field('left', $._value),
            field('operator', alias('<', $.less_than_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          4,
          seq(
            field('left', $._value),
            field('operator', alias('<=', $.less_equal_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          4,
          seq(
            field('left', $._value),
            field('operator', alias('>', $.greater_than_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          4,
          seq(
            field('left', $._value),
            field('operator', alias('>=', $.greater_equal_operator)),
            field('right', $._value)
          )
        ),

        // Additive operators
        prec.left(
          5,
          seq(
            field('left', $._value),
            field('operator', alias('+', $.addition_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          5,
          seq(
            field('left', $._value),
            field('operator', alias('-', $.subtraction_operator)),
            field('right', $._value)
          )
        ),

        // Multiplicative operators
        prec.left(
          6,
          seq(
            field('left', $._value),
            field('operator', alias('*', $.multiplication_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          6,
          seq(
            field('left', $._value),
            field('operator', alias('/', $.division_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          6,
          seq(
            field('left', $._value),
            field('operator', alias('%', $.modulo_operator)),
            field('right', $._value)
          )
        ),

        // Exponentiation
        prec.right(
          7,
          seq(
            field('left', $._value),
            field('operator', alias('^', $.exponentiation_operator)),
            field('right', $._value)
          )
        )
      ),

    unary_expression: ($) =>
      choice(
        prec.right(
          8,
          seq(
            field('operator', alias('!', $.logical_not_operator)),
            field('operand', $._value)
          )
        ),
        prec.right(
          8,
          seq(
            field('operator', alias('-', $.unary_minus_operator)),
            field('operand', $._value)
          )
        )
      ),

    call_expression: ($) =>
      prec.left(
        12,
        seq(
          field('function', $.identifier),
          field('arguments', $.argument_list)
        )
      ),

    parenthesized_expression: ($) =>
      seq(
        '(',
        $._value,
        choice(
          ')',
          // Error recovery for missing closing parenthesis
          prec(-1, token.immediate(/[;{]/)) // Recover at semicolon or opening brace
        )
      ),

    let_expression: ($) =>
      prec.dynamic(
        100,
        seq(
          'let',
          '(',
          commaSep1($.let_assignment),
          choice(
            ')',
            // Error recovery for missing closing parenthesis
            prec(-1, token.immediate(/[;{]/)) // Recover at semicolon or opening brace
          ),
          field('body', $._value)
        )
      ),

    let_assignment: ($) =>
      seq(field('name', $.identifier), '=', field('value', $._value)),

    // Range element rule - excludes range expressions to prevent circular dependency
    vector_expression: ($) =>
      prec(
        1,
        seq(
          '[',
          commaSep($._vector_element),
          choice(
            ']',
            // Error recovery for missing closing bracket
            prec(-1, token.immediate(/[;{]/)) // Recover at semicolon or opening brace
          )
        )
      ),

    // List comprehension with correct syntax order
    // Syntax: [for (i = range) expr] or [for (i = range) if (condition) expr]
    // Uses non-recursive value rule to prevent recursion in expr field
    identifier: ($) => /[A-Za-z_][A-Za-z0-9_]*/,

    number: ($) => {
      const decimal = /[0-9]+\.[0-9]+([eE][-+]?[0-9]+)?/;
      const integer = /[0-9]+([eE][-+]?[0-9]+)?/;
      return token(choice(decimal, integer));
    },

    string: ($) =>
      choice(
        // Double-quoted strings with escape sequence support
        seq(
          '"',
          repeat(
            choice(
              /[^"\\]+/, // Regular characters (not quote or backslash)
              /\\./ // Escape sequences (backslash followed by any character)
            )
          ),
          '"'
        ),
        // Single-quoted strings with escape sequence support
        seq(
          "'",
          repeat(
            choice(
              /[^'\\]+/, // Regular characters (not quote or backslash)
              /\\./ // Escape sequences (backslash followed by any character)
            )
          ),
          "'"
        )
      ),

    boolean: ($) => choice('true', 'false'),

    comment: ($) =>
      choice(
        // Single line comments
        seq('//', /.*/),
        // Block comments with nested comment support
        seq(
          '/*',
          repeat(choice(/[^*\/]+/, /\*[^\/]/, /\/[^*]/, $.comment)),
          '*/'
        )
      ),

    // Non-recursive expression rules for list comprehensions
    // These rules use _non_list_comprehension_value instead of $._value to prevent recursion

    // Vector element rule that excludes bracketed range expressions to prevent [1:5] being parsed as vector
